# agartex-resource-management

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  swagger.yaml
.github/workflows/: build-and-publish.yaml  verify.yaml
migrations/: 1_users.sql  2_projects.sql  3_resources.sql  4_projects.sql  5_collaboration.sql  5_projects_names.sql  5_sharing.sql
src/: config.rs  constants.rs  database.rs  filesystem.rs  main.rs  validation.rs
src/control/: mod.rs
src/control/documents/: mod.rs
src/control/projects/: mod.rs
src/control/resources/: mod.rs
src/control/sessions/: mod.rs  tests.rs
src/control/sharing/: mod.rs
src/control/users/: mod.rs  tests.rs
src/domain/: crud.rs  documents.rs  headers.rs  mod.rs  projects.rs  resources.rs  sessions.rs  users.rs
src/extractors/: headers.rs  mod.rs  time.rs
src/repository/: crud.rs  documents.rs  mod.rs  projects.rs  resources.rs  sessions.rs  sharing.rs  users.rs
src/routing/: documents.rs  mod.rs  projects.rs  resources.rs  sessions.rs  users.rs
src/service/: hash.rs  mod.rs
