[package]
name = "agartex-resource-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["headers"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
bcrypt = "0.14.0"
http = "0.2.9"
headers = "0.3.8"
lazy_static = "1.4.0"
mockall = "0.11.4"
regex = "1.7.3"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
validator = { version = "0.16.0", features = ["derive"] }
tokio-util = { version = "0.7.8", features = ["io"] }
rand = "0.8.5"
